--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "typescript": "4.8.4"
+  },
+  "engines": {
+    "node": "16",
+    "yarn": "1"
   }
 }
