--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
+    "@commitlint/cli": "17.2.0",
+    "@commitlint/config-conventional": "17.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "husky": "^8.0.2",
+    "eslint-plugin-prettier": "4.2.1",
+    "husky": "8.0.2",
+    "prettier": "2.7.1",
     "typescript": "4.8.4"
   },
   "engines": {
