--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "8.0.2",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
+    "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
