--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:cloudflare": "@cloudflare/next-on-pages --experimental-minify",
     "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "0.2.0",
     "@commitlint/cli": "17.2.0",
     "@commitlint/config-conventional": "17.2.0",
     "@testing-library/jest-dom": "5.16.5",
