--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "8.0.2",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
