--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "cypress": "^11.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "eslint-plugin-prettier": "4.2.1",
