--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:tsc": "tsc",
+    "lint:tsc:cypress": "tsc --project cypress/tsconfig.json",
     "postinstall": "husky install",
     "start": "next start",
     "test": "jest",
