--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,4 +29,6 @@ jobs:
         run: yarn lint
 
       - name: Type check
-        run: yarn lint:tsc
+        run: |
+          yarn lint:tsc
+          yarn lint:tsc:cypress
