--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   "devDependencies": {
     "@commitlint/cli": "17.3.0",
     "@commitlint/config-conventional": "17.3.0",
-    "@testing-library/cypress": "^8.0.7",
+    "@testing-library/cypress": "8.0.7",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "cypress": "^11.2.0",
+    "cypress": "11.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
     "husky": "8.0.2",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
