--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "14.0.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "2.1.5",
     "@commitlint/cli": "17.3.0",
     "@commitlint/config-conventional": "17.3.0",
     "@testing-library/cypress": "8.0.7",
