chore(package): add clean script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "clean": "rm -rf .next",
     "cypress:open": "cypress open",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
