refactor: migrate from pages to app
https://beta.nextjs.org/docs/upgrade-guide#migrating-from-pages-to-app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next-env.d.ts"],
   "exclude": ["cypress", "cypress.config.ts", "node_modules"]
 }
