--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "autoprefixer": "10.4.13",
     "cypress": "12.1.0",
     "cypress-cucumber-steps": "1.12.0",
     "eslint": "8.29.0",
@@ -42,7 +43,9 @@
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
+    "postcss": "8.4.20",
     "prettier": "2.8.1",
+    "tailwindcss": "3.2.4",
     "ts-node": "10.9.1",
     "typescript": "4.9.4"
   },
