--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -6,6 +6,7 @@ pull_request_rules:
       - check-success=commitlint
       - check-success=lint
       - check-success=test
+      - 'title~=^build\(deps-dev\): bump '
     actions:
       merge:
         method: merge
