--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -4,9 +4,10 @@ pull_request_rules:
       - author=dependabot[bot]
       - check-success=build
       - check-success=commitlint
+      - check-success=cypress
       - check-success=lint
       - check-success=test
       - 'title~=^build\(deps-dev\): bump '
     actions:
       merge:
-        method: merge
+        method: squash
