ci(github): merge with squash in dependabot.yml
Signed-off-by: Mark <remarkablemark@users.noreply.github.com>

--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Auto-merge Dependabot PR
         if: contains(github.event.pull_request.title, 'deps-dev')
-        run: gh pr merge --auto --merge $PR_URL
+        run: gh pr merge --auto --squash $PR_URL
