--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "clean": "rm -rf .next",
     "cypress:open": "cypress open",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "lint:tsc": "tsc",
     "lint:tsc:cypress": "tsc --project cypress/tsconfig.json",
     "prepare": "husky",
@@ -38,7 +38,7 @@
     "cypress": "15.8.1",
     "cypress-cucumber-steps": "3.64.0",
     "eslint": "9.39.2",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "16.1.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "husky": "9.1.7",
